# tppt

./: .gitignore  404.html  README.md  biome.json  index.html  main.py  mkdocs.yml  objects.inv  package.json  parse_pptx.py  pyproject.toml  sitemap.xml
.cursor/rules/: common.mdc  python.mdc
.github/workflows/: ci.yml  deploy-docs.yml  publish-pypi.yml
api/tppt/: index.html
codes/: apply_sample.py  check-version.py  custom_slide_master.py  custom_slide_master_base.pptx  text.py
contributing/: index.html
design/: slide_master.py  全体設計.md
docs/: mkdocs.yml
docs/codes/: polars.py  quick_start.py  quick_start_many_import.py  wrap_presentation.py
docs/docs/: api.md  contributing.md  examples.md  index.md  installation.md  usage.md
docs/docs/api/: tppt.md  tppt_exception.md  tppt_pptx.md  tppt_pptx_dml.md  tppt_pptx_shape.md  tppt_pptx_text.md  tppt_template.md  tppt_types.md
docs/docs/codes/: picture.py  pptx_tree.py  table.py
docs/docs/home/: concept.md
docs/docs/usage/: index.md  presentation.md  slide-layout.md
docs/home/: concept.md
docs/usage/: chart.md  index.md  picture.md  slide-layout.md  slide-master.md  slide.md  table.md  text.md
examples/: add_shape_example.py  color_text.py  custom_slide_master.py  dataflame_table.py  formatted_text.py  index.html  presentation_tree.json  presentation_tree.py  simple_example.py
home/concept/: index.html
home/installation/: index.html
src/pptxr/: __init__.py  _data.py  _features.py  _presentation.py  _slide_master.py  _utils.py  exception.py  types.py  units.py
src/pptxr/_builder/: __init__.py
src/pptxr/_builders/: __init__.py  presentation.py  slide.py
src/pptxr/_pptx/: __init__.py  converter.py  converters.py  image.py  picture.py  presentation.py  shape.py  slide.py  slide_layout.py  slide_master.py  table.py  text.py  title.py  types.py
src/pptxr/_pptx/shape/: picture.py  table.py  text.py
src/pptxr/_pptxr/: __init__.py  converters.py  slide_master.py  types.py
src/pptxr/abstract/: __init__.py  presentation.py  types.py
src/pptxr/types/: __init__.py  _color.py  _length.py  length.py
src/tppt/: __init__.py  _features.py  exception.py  slide_layout.py  slide_master.py
src/tppt/_pptx/: converter.py  converters.py  placeholder.py  presentation.py  slide.py  slide_layout.py  slide_master.py  snotes_slide.py  tree.py
src/tppt/_pptx/shape/: __init__.py  background.py  picture.py  table.py  text.py  title.py
src/tppt/_tppt/: slide_layout.py  slide_master.py
src/tppt/pptx/: __init__.py  action.py  converter.py  notes_slide.py  placeholder.py  presentation.py  slide.py  slide_layout.py  slide_master.py  snotes_slide.py  tree.py
src/tppt/pptx/chart/: __init__.py  chart.py
src/tppt/pptx/dml/: __init__.py  color.py  effect.py  fill.py  line.py
src/tppt/pptx/enum/: dml.py
src/tppt/pptx/shape/: __init__.py  background.py  movie.py  picture.py  placeholder.py  table.py  text.py
src/tppt/pptx/table/: __init__.py  cell.py  table.py
src/tppt/pptx/text/: font.py  hyperlink.py  paragraph.py  run.py  text_frame.py
src/tppt/template/: default.py  slide_layout.py  slide_master.py
src/tppt/tool/: __init__.py  ppt2template.py  ppt2tree.py
src/tppt/types/: __init__.py  _angle.py  _color.py  _length.py
tests/: conftest.py  test_color.py  test_pptx_wrapper.py  test_presentation.py  test_slide.py  test_slide_layout.py  test_slide_master.py  test_slide_templates.py  test_table.py  test_text.py  test_types_color.py  test_types_length.py  test_units.py
usage/: index.html
usage/chart/: index.html
usage/picture/: index.html
usage/slide/: index.html
usage/slide-layout/: index.html
usage/slide-master/: index.html
usage/table/: index.html
usage/text/: index.html
