[project]
name = "tppt"
version = "0.1.0"
description = "PowerPoint Builder"
readme = "README.md"
requires-python = ">=3.11.0"
authors = [{ name = "yassun7010", email = "yassun7010@outlook.com" }]
dependencies = [
  "Pillow>=10.0.0",
  "python-pptx>=1.0.2",
  "typing-extensions>=4.13.2",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0.0"]
polars = ["polars>=0.20.0"]

[dependency-groups]
dataframes = [
  "pandas",
  "polars",
]
dev = [
  "mypy>=1.15.0",
  "pyright>=1.1.399",
  "pytest>=8.3.5",
  "ruff>=0.11.6",
  "taskipy>=1.14.1",
  "tombi>=0.3.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = ["tests"]

[tool.taskipy.tasks]
ci = "task format && task lint && task typecheck && task test"
format = "ruff format"
format-check = "ruff format --check"
lint = "ruff check"
lint-check = "ruff check --fix"
typecheck-pyright = "pyright"
typecheck = "task typecheck-pyright"
test = "pytest"

[tool.pyright]
include = ["src/tppt", "examples", "tests"]
exclude = [ "**/site-packages", ".venv/**"]

[tool.mypy]
exclude = ["**/site-packages", ".venv/**"]
